--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Personal Website</title>
+    <title>Gabriela Sierocka - Personal Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 <body>
     <div class="container">
         <img src="/Users/gabrielasierocka/Desktop/website.jpg" alt="Gabriela Sierocka">
-        <h1>Gabriela Sierocka</h1>
+        <h1></h1>
         <p>Hi! My name is Gabi and I am a Computer Science and Economics student at the University of Notre Dame.</p>
     </div>
 </body>
