--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="/Users/gabrielasierocka/Desktop/website.jpg" alt="Gabriela Sierocka">
-        <h1></h1>
+        <img src="" alt="Gabriela Sierocka">
+        <h1>Gabriela Sierocka</h1>
         <p>Hi! My name is Gabi and I am a Computer Science and Economics student at the University of Notre Dame.</p>
     </div>
 </body>
