--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="image.jpg" alt="Gabriela Sierocka">
+        <img src="/Users/gabrielasierocka/Desktop/website.jpeg" alt="Gabriela Sierocka">
         <h1>Gabriela Sierocka</h1>
         <p>Hi! My name is Gabi and I am a Computer Science and Economics student at the University of Notre Dame.</p>
     </div>
